versions/v2.14/modules/zh/pages/security/sample-psact.adoc
= 示例 PodSecurityConfiguration
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, de, es, fr, ja, pt, zh]
endif::[]
:revdate: 2026-03-12
:page-revdate: {revdate}
:community-path: reference-guides/rancher-security/psa-restricted-exemptions.adoc 
:product-path: security/sample-psact.adoc

以下 PodSecurityConfiguration 包含 `rancher-restricted` 集群正常运行所需的 Rancher 名称空间豁免。

[,yaml]
----
apiVersion: apiserver.config.k8s.io/v1
kind: AdmissionConfiguration
plugins:
  - name: PodSecurity
    configuration:
      apiVersion: pod-security.admission.config.k8s.io/v1
      kind: PodSecurityConfiguration
      defaults:
        enforce: "restricted"
        enforce-version: "latest"
        audit: "restricted"
        audit-version: "latest"
        warn: "restricted"
        warn-version: "latest"
      exemptions:
        namespaces:
        - calico-apiserver
        - calico-system
        - cattle-alerting
        - cattle-capi-system
        - cattle-csp-adapter-system
        - cattle-elemental-system
        - cattle-epinio-system
        - cattle-externalip-system
        - cattle-fleet-local-system
        - cattle-fleet-system
        - cattle-gatekeeper-system
        - cattle-global-data
        - cattle-global-nt
        - cattle-impersonation-system
        - cattle-istio
        - cattle-istio-system
        - cattle-logging
        - cattle-logging-system
        - cattle-monitoring-system
        - cattle-neuvector-system
        - cattle-prometheus
        - cattle-provisioning-capi-system
        - cattle-resources-system
        - cattle-sriov-system
        - cattle-system
        - cattle-turtles-system
        - cattle-ui-plugin-system
        - cattle-windows-gmsa-system
        - cert-manager
        - cis-operator-system
        - compliance-operator-system
        - fleet-default
        - fleet-local
        - istio-system
        - kube-node-lease
        - kube-public
        - kube-system
        - longhorn-system
        - rancher-alerting-drivers
        - rancher-compliance-system
        - security-scan
        - sr-operator-system
        - tigera-operator
        - traefik
        runtimeClasses: []
        usernames: []
----
